debian based dockerfile

--- a/docker/arch/Dockerfile
+++ b/docker/arch/Dockerfile
@@ -5,7 +5,8 @@ RUN pacman -Sy && \
     	      texlive-core texlive-langcyrillic \
 	      texlive-latexextra texlive-pictures \
 	      make && \
-	      rm -rf /var/cache/pacman/pkg
+	      rm -rf /var/cache/pacman/pkg && \
+	      rm -rf /var/lib/pacman/sync/*
 
 COPY deps /tex/deps
 COPY scripts/bin/* /tex/
