working LaTeX image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,17 +1,15 @@
-FROM debian:latest
-
-RUN  apt-get update && \
-     apt-get install -y make locales texlive-base \
-     	     texlive-latex-recommended texlive-fonts-recommended \
-	     texlive-lang-cyrillic texlive-latex-extra \
-	     python3-pygments cm-super-minimal && \
-     localedef -i ru_RU -c -f UTF-8 -A /usr/share/locale/locale.alias ru_RU.UTF-8 && \
-     texhash && update-texmf && \
-     rm -rf /var/cache/apt/* && rm -rf /var/lib/apt/lists/*
+FROM alpine:latest
 
 ENV LANG ru_RU.UTF-8
 
-COPY include_pkg /tex/deps
-COPY scripts/bin/* /tex/
+RUN apk add --no-cache libc6-compat make \
+    	    	       texlive texmf-dist-latexextra \
+		       texlive-luatex texlive-xetex \
+		       texmf-dist-langcyrillic \
+		       py3-pygments
 
-RUN /tex/build_deps
+WORKDIR /tex
+COPY include_pkg ./deps/
+COPY scripts/bin/* ./
+
+RUN ./build_deps
